Fixed java warnings due to java 11 - (Task #1062)
- Fixed issues on deprecated usage of Double(...) constructor
- Fixed issues on deprecated usage of newInstance() reflective method

---
Task #1062: Migrate to Java 11 and Eclipse 2021-12